[gd_scene load_steps=4 format=3 uid="uid://cgps7xkn4pmri"]

[ext_resource type="PackedScene" uid="uid://g0oetsoqc1w1" path="res://snake.tscn" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://b8fsmic1qyh4b" path="res://global_manager.gd" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://b2rehootvkyww" path="res://hud.tscn" id="3_lquwl"]

[node name="Main" type="Node"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_1bvp3")

[node name="AppleSpawnTimer" type="Timer" parent="GameManager"]

[node name="HUD" parent="." instance=ExtResource("3_lquwl")]

[node name="Snake" parent="." instance=ExtResource("1_ig7tw")]

[connection signal="grow_snake" from="GameManager" to="Snake" method="_on_game_manager_grow_snake"]
[connection signal="score_changed" from="GameManager" to="Snake" method="_on_game_manager_score_changed"]
[connection signal="score_changed" from="GameManager" to="HUD" method="_on_game_manager_score_changed"]
[connection signal="timeout" from="GameManager/AppleSpawnTimer" to="GameManager" method="_on_apple_spawn_timer_timeout"]
[connection signal="die" from="Snake" to="GameManager" method="game_over"]
[connection signal="move_to" from="Snake" to="GameManager" method="_on_snake_move_to"]
